--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "server.js",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "telegraf": "^3.33.3"
+    "telegraf": "^3.33.3",
+    "telegraf-inline-menu": "^4.0.0"
   },
   "devDependencies": {
     "typescript": "^3.5.3"
